marcoTests/testData/error/object2.marco
--before
{a

--after
2: Unexpected end of file

{ağŸ’¥